Fix: index pane clipped with right padding
See here for more information:

https://github.com/grislyeye/vellum-doc/issues/16

--- a/src/vellum-doc.css
+++ b/src/vellum-doc.css
@@ -50,7 +50,6 @@
 }
 
 #index {
-  width: var(--index-width, var(--default-index-width));
   border-right: 1px solid;
   padding-bottom: 1em;
 }
